--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 astroid==2.4.2
 audio2numpy==0.1.2
+certifi==2020.6.20
 cffi==1.14.2
+chardet==3.0.4
 ffmpeg==1.4
 flake8==3.8.3
+idna==2.10
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
@@ -10,7 +13,9 @@ numpy==1.19.1
 pycodestyle==2.6.0
 pycparser==2.20
 pyflakes==2.2.0
+requests==2.24.0
 six==1.15.0
 sounddevice==0.4.0
 toml==0.10.1
+urllib3==1.25.10
 wrapt==1.12.1
