--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ idna==2.10
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+mypy==0.782
+mypy-extensions==0.4.3
 numpy==1.19.1
 pycodestyle==2.6.0
 pycparser==2.20
@@ -17,5 +19,7 @@ requests==2.24.0
 six==1.15.0
 sounddevice==0.4.0
 toml==0.10.1
+typed-ast==1.4.1
+typing-extensions==3.7.4.2
 urllib3==1.25.10
 wrapt==1.12.1
