--- a/mypy.ini
+++ b/mypy.ini
@@ -1,3 +1,8 @@
+[mypy]
+python_version = 3.8
+warn_unused_configs = True
+no_implicit_optional = True
+
 [mypy-audio2numpy.*]
 ignore_missing_imports = True
 
