Stricter type checking

--- a/mypy.ini
+++ b/mypy.ini
@@ -2,6 +2,10 @@
 python_version = 3.8
 warn_unused_configs = True
 no_implicit_optional = True
+disallow_untyped_defs = True
+
+[mypy-numpy.*]
+ignore_missing_imports = True
 
 [mypy-audio2numpy.*]
 ignore_missing_imports = True
