added exit and skip method, updated startup script

--- a/mypy.ini
+++ b/mypy.ini
@@ -12,3 +12,9 @@ ignore_missing_imports = True
 
 [mypy-sounddevice.*]
 ignore_missing_imports = True
+
+[mypy-telegram.*]
+ignore_missing_imports = True
+
+[mypy-decouple.*]
+ignore_missing_imports = True
