--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,16 @@ audio2numpy==0.1.2
 certifi==2020.6.20
 cffi==1.14.2
 chardet==3.0.4
+click==7.1.2
 ffmpeg==1.4
 flake8==3.8.3
+Flask==1.1.2
 idna==2.10
 isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.11.2
 lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
 mccabe==0.6.1
 mypy==0.782
 mypy-extensions==0.4.3
@@ -22,4 +27,6 @@ toml==0.10.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.2
 urllib3==1.25.10
+waitress==1.4.4
+Werkzeug==1.0.1
 wrapt==1.12.1
