--- a/.github/workflows/checking.yml
+++ b/.github/workflows/checking.yml
@@ -27,9 +27,9 @@ jobs:
       uses: grantmcconnaughey/lintly-flake8-github-action@v1.0
       with:
         # The GitHub API token to use for creating PR reviews
-        token: $GITHUB_TOKEN
+        token: ${{ secrets.GITHUB_TOKEN }}
         # Args to pass to the flake8 executable
-        args: "--max-line-length=120 ."
+        args: "--max-line-length 120 ."
       
     - name: Mypy Check
       uses: jpetrucciani/mypy-check@0.761
