--- a/mypy.ini
+++ b/mypy.ini
@@ -18,3 +18,6 @@ ignore_missing_imports = True
 
 [mypy-decouple.*]
 ignore_missing_imports = True
+
+[mypy-waitress.*]
+ignore_missing_imports = True
