--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -1,4 +1,4 @@
-name: Checking Workflow
+name: Static program analysis
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -19,9 +19,6 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-    
-    - name: Setup Python
-      uses: actions/setup-python@v2
       
     - name: Lintly-Flake8
       uses: grantmcconnaughey/lintly-flake8-github-action@v1.0
@@ -31,5 +28,3 @@ jobs:
       
     - name: Mypy Check
       uses: jpetrucciani/mypy-check@0.761
-     
-    # TODO: run unit tests
