--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -20,11 +20,8 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
       
-    - name: Lintly-Flake8
-      uses: grantmcconnaughey/lintly-flake8-github-action@v1.0
-      with:
-        # The GitHub API token to use for creating PR reviews
-        token: ${{ secrets.GITHUB_TOKEN }}
+    - name: python-flake8
+      uses: julianwachholz/flake8-action@v1.0.0
       
     - name: Mypy Check
       uses: jpetrucciani/mypy-check@0.761
