--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -20,8 +20,8 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
       
-    - name: python-flake8
-      uses: julianwachholz/flake8-action@v1.0.0
+    - name: Flake8 action
+      uses: suo/flake8-github-action@v1
       
     - name: Mypy Check
       uses: jpetrucciani/mypy-check@0.761
