--- a/config.example.json
+++ b/config.example.json
@@ -1,3 +1,12 @@
 {
-    "library": "test_library"
+    "library": "test_library",
+    "telegram": {
+        "enabled": false,
+        "token": "",
+        "users": []
+    },
+    "web": {
+        "enabled": true,
+        "port": 5000
+    }
 }
