--- a/mypy.ini
+++ b/mypy.ini
@@ -21,3 +21,6 @@ ignore_missing_imports = True
 
 [mypy-waitress.*]
 ignore_missing_imports = True
+
+[mypy-pytube.*]
+ignore_missing_imports = True
