--- a/mypy.ini
+++ b/mypy.ini
@@ -7,9 +7,6 @@ disallow_untyped_defs = True
 [mypy-numpy.*]
 ignore_missing_imports = True
 
-[mypy-audio2numpy.*]
-ignore_missing_imports = True
-
 [mypy-sounddevice.*]
 ignore_missing_imports = True
 
@@ -23,4 +20,7 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-pytube.*]
+ignore_missing_imports = True
+
+[mypy-ffmpeg.*]
 ignore_missing_imports = True
