--- a/mypy.ini
+++ b/mypy.ini
@@ -13,9 +13,6 @@ ignore_missing_imports = True
 [mypy-telegram.*]
 ignore_missing_imports = True
 
-[mypy-decouple.*]
-ignore_missing_imports = True
-
 [mypy-waitress.*]
 ignore_missing_imports = True
 
@@ -23,4 +20,7 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-ffmpeg.*]
+ignore_missing_imports = True
+
+[mypy-ifcfg.*]
 ignore_missing_imports = True
