--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          sudo apt install ffmpeg libportaudio2
           
       - name: Run unit tests
         run: python -m unittest tests/*.py
