--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,10 +18,14 @@ jobs:
         with:
           python-version: 3.8
       
-      - name: Install dependencies
+      - name: Install python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      
+      - name: Install system dependencies
+        run: |
+          sudo apt update
           sudo apt install ffmpeg libportaudio2
           
       - name: Run unit tests
