Use config.json for extensions

--- a/config.example.json
+++ b/config.example.json
@@ -1,5 +1,6 @@
 {
     "library": "test_library",
+    "extensions": ["tagesschau"],
     "telegram": {
         "enabled": false,
         "token": "",
