--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -11,11 +11,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-      
-    - name: Mypy Check
-      uses: jpetrucciani/mypy-check@0.761
+    
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+
+    - name: Update pip
+      run: python -m pip install --upgrade pip
+
+    - name: Install requirements
+      run: pip install -r requirements.txt
+    
+    - name: Install mypy
+      run: pip install mypy
+    
+    - name: Run mypy check
+      run: mypy .
   
   syntax-check:
     runs-on: ubuntu-latest
