--- a/mypy.ini
+++ b/mypy.ini
@@ -10,6 +10,9 @@ ignore_missing_imports = True
 [mypy-sounddevice.*]
 ignore_missing_imports = True
 
+[mypy-soundfile.*]
+ignore_missing_imports = True
+
 [mypy-telegram.*]
 ignore_missing_imports = True
 
