--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -28,7 +28,9 @@ jobs:
       run: pip install mypy
     
     - name: Run mypy check
-      run: mypy .
+      run: |
+        mypy .
+        mypy tests
   
   syntax-check:
     runs-on: ubuntu-latest
@@ -45,6 +47,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8
+
+      - name: Lint tests
+        run: flake8 tests --count --show-source --statistics
           
       - name: Lint with flake8
         run: |
@@ -52,4 +57,3 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-  
