--- a/config.example.json
+++ b/config.example.json
@@ -1,6 +1,13 @@
 {
     "library": "test_library",
     "extensions": ["tagesschau"],
+    "hardware": {
+        "button": {
+            "enabled": false,
+            "pause": false,
+            "skip": true
+        }
+    },
     "telegram": {
         "enabled": false,
         "token": "",
