--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -25,7 +25,7 @@ jobs:
       run: pip install -r requirements.txt
     
     - name: Install mypy
-      run: pip install mypy
+      run: pip install mypy==0.812
     
     - name: Run mypy check
       run: mypy .
